--- a/PagedFeed/ItemCollectionViewCell.xib
+++ b/PagedFeed/ItemCollectionViewCell.xib
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ItemCollectionViewCell" customModule="DiscountAsciiWarehouse" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ItemCollectionViewCell" customModule="PagedFeed" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="256" height="213"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -18,19 +18,16 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vsU-cK-rn3">
                                 <rect key="frame" x="0.0" y="0.0" width="256" height="169"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="natural" lineBreakMode="tailTruncation" minimumScaleFactor="0.01" translatesAutoresizingMaskIntoConstraints="NO" id="lod-qK-RsR">
-                                        <rect key="frame" x="65" y="0.0" width="127.5" height="169"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="36"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sww-Fx-sVx">
+                                        <rect key="frame" x="0.0" y="0.0" width="256" height="169"/>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.92156862745098034" green="0.92156862745098034" blue="0.92156862745098034" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="lod-qK-RsR" secondAttribute="bottom" id="Tcu-yc-wJU"/>
-                                    <constraint firstItem="lod-qK-RsR" firstAttribute="top" secondItem="vsU-cK-rn3" secondAttribute="top" id="gme-19-I9J"/>
-                                    <constraint firstItem="lod-qK-RsR" firstAttribute="centerX" secondItem="vsU-cK-rn3" secondAttribute="centerX" id="i8q-YY-QMx"/>
-                                    <constraint firstItem="lod-qK-RsR" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vsU-cK-rn3" secondAttribute="leading" constant="10" id="jVJ-qB-v0e"/>
+                                    <constraint firstItem="sww-Fx-sVx" firstAttribute="top" secondItem="vsU-cK-rn3" secondAttribute="top" id="MRk-eo-qx0"/>
+                                    <constraint firstItem="sww-Fx-sVx" firstAttribute="leading" secondItem="vsU-cK-rn3" secondAttribute="leading" id="ZSt-eU-wiy"/>
+                                    <constraint firstAttribute="trailing" secondItem="sww-Fx-sVx" secondAttribute="trailing" id="hr6-PT-325"/>
+                                    <constraint firstAttribute="bottom" secondItem="sww-Fx-sVx" secondAttribute="bottom" id="hsu-3n-ajd"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i5v-Se-DB1">
@@ -80,7 +77,7 @@
                 <outlet property="bottomSubtitle" destination="ZKJ-fb-hop" id="3vL-DW-hfO"/>
                 <outlet property="bottomTitle" destination="fFd-qm-87u" id="sp2-pd-eQy"/>
                 <outlet property="bottomView" destination="i5v-Se-DB1" id="Q6C-Zh-Obc"/>
-                <outlet property="contentLabel" destination="lod-qK-RsR" id="228-uC-lrw"/>
+                <outlet property="imageView" destination="sww-Fx-sVx" id="sJn-Zc-bFk"/>
             </connections>
             <point key="canvasLocation" x="286" y="291.5"/>
         </collectionViewCell>
